<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Location Ringer allows you to create location based ringer profiles called Ringers. Ringers allow you to have your phone automatically change basic settings based on where you are. For example you can have your phone automatically become silent when you go to work, or automatically enable your wireless when you get home.\n\nTo Start simply review your default settings in the Default Ringer and SAVE it. Then you can create new ringers as they are needed.\n\nThe Default Ringer is applied when there are no applicable Ringers for your current location.</string>
    <string name="app_name">Location Ringer beta</string>
    <string name="silent_enabled">Silent Enabled</string>
    <string name="silent_disabled">Silent Disabled</string>
    <string name="ringer_options">Ringer Options</string>
    <string name="enable">Enabled</string>
    <string name="disable">Disabled</string>
    <string name="ringtone_options">Ringtone Options</string>
    <string name="volume">Volume</string>
    <string name="notification_ringtone_options">Notification Ringtone Options</string>
    <string name="data">Data</string>
    <string name="wifi_enabled">Wifi Enabled</string>
    <string name="wifi_disabled">Wifi Disabled</string>
    <string name="bt_enabled">Bluetooth Enabled</string>
    <string name="bt_disabled">Bluetooth Disabled</string>
    <string name="location_and_radius">Location and Radius</string>
    <string name="editing_location">Finish Editing Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="update_interval">Update Interval</string>
    <string name="save_ringer">Save Ringer</string>
    <string name="map_editing_enabled">Map Editing Enabled</string>
    <string name="map_editiing_disabled">Map Editing Disabled</string>
    <string name="default_ringer">Default</string>
    <string name="applying">Applying </string>
    <string name="about">About</string>
    <string name="accuracy">Accuracy</string>
    <string name="editing">Editing</string>
    <string name="new_ringer">New Ringer</string>
    <string name="ignore_location">Ignore Location</string>
    <string name="ignore_location_about">Ignore location when the reported accuracy is greater than the selected amount</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="settings">Settings</string>
    <string name="cant_delete_default">Sorry, You can not delete the default</string>
    <string name="music_volume">Media Volume</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="other_volume_levels">Other Volume Levels</string>
    <string name="toasty">Toasty</string>
    <string name="toasty_about">Display a toast message when applying ringers</string>
    <string name="accuracy_about">Minimum required accuracy to report</string>
    <string name="update_interval_about">Amount of time between updates</string>
    <string name="email">rickbarrette@gmail.com</string>
    <string name="email_about">Send an email with ideas or problems to help make this application even better! Good or bad I want to know what you think!</string>
    <string name="contact_us">Contact Us</string>
    <string name="version_info">Version Information</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="start_on_boot_about">Enable Location Ringer to start on boot</string>
    <string name="saving">Saving…</string>
    <string name="loading">Loading…</string>
    <string name="upgrading">Upgrading database…</string>
    <string name="deleteing">Deleting ringer…</string>
    <string name="gathering">Gathering Location…</string>
    <string name="welcome">Welcome</string>
    <string name="registered">Registered with Skyhook</string>
    <string name="skyhook_error_registration">There was an error registering with Skyhook, please try again when you have an Internet connection.</string>
    <string name="add_feature">Add Feature</string>
    <string name="ringtone">Ringtone</string>
    <string name="notification_ringtone">Notification Ringtone</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="radius">Radius</string>
    <string name="select_tone">Select Tone</string>
    <string name="add_a_feature">Click the plus to add a feature</string>
    <string name="add_a_ringer">Click the plus to add a ringer</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="backup_about">Backups your ringers and settings to external storage</string>
    <string name="restore_about">Restores your ringers and settings from exteranal storage</string>
    <string name="default_save_hint">This is the first time you edited your Default ringer. When you are done editing please click save to save.</string>
    <string name="default_hint">Click Default to edit your default ringer.</string>
    <string name="how">How</string>
    <string name="what">What</string>
    <string name="notification_volume">Notification Volume</string>
    <string name="call_volume">Call Volume</string>
    <string name="system_volume">System Volume</string>
    <string name="ringtone_volume">Ringtone Volume</string>
    <string name="dtmf_volume">DTMF Volume</string>
    <string name="ringer_description">Ringer Description</string>
    <string name="silent">Silent</string>
    <string name="location">Location</string>
    <string name="about_default_ringer">This Ringer is applied when there is no applicable ringers</string>
    <string name="delete">Delete</string>
    <string name="ringer_name">Ringer Name</string>
    <string name="start_location_service">Start Location Service</string>
    <string name="select_tone">Select Tone</string>
    <string name="mark_my_location">Mark my location</string>
    <string name="my_location">My location</string>
    <string name="map_mode">Map Mode</string>
    <string name="current_ringer">Current Ringer:</string>
    <string name="preparing_ringer">Prepearing New Ringer</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="legal">Legal</string>

</resources>