<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  
   <ToggleButton 
   android:layout_height="wrap_content" 
   android:id="@+id/ringer_enabled" 
   android:textOn="@string/enable"
   android:textOff="@string/disable"
   android:layout_width="match_parent"
   />
  
   <TextView
  android:text="@string/ringer_name" 
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:drawable/title_bar"
  android:textColor="#FFFFFF"
  android:layout_marginTop="10dip"/>
  
   <view class="com.TwentyCodes.android.LocationRinger.ui.fragments.AboutRingerFragment$ListeningEditText" 
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" 
   android:id="@+id/ringer_name" 
   android:capitalize="words"
   />
  
   <TextView
  android:text="@string/ringer_description" 
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:drawable/title_bar"
  android:textColor="#FFFFFF"
  android:layout_marginTop="10dip"/>
  
  <view class="com.TwentyCodes.android.LocationRinger.ui.fragments.AboutRingerFragment$ListeningEditText" 
  android:layout_width="match_parent" 
  android:layout_height="wrap_content" 
  android:id="@+id/ringer_description" 
  android:inputType="textMultiLine" 
  android:capitalize="sentences"/>
    
</LinearLayout>
