<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	xmlns:android="http://schemas.android.com/apk/res/android">
  	
  	<include 
  	android:id="@+id/buttons"
    layout="@layout/ringer_info_button_bar"
    android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_alignParentBottom="true"
  	android:layout_centerHorizontal="true"/>
				    
  	<RelativeLayout
    android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:layout_above="@id/buttons"
  	>
  	
		<com.TwentyCodes.android.LocationRinger.ui.ScrollView
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:layout_alignParentTop="true"
		  android:id="@+id/scrollview"
		  >
		
			<LinearLayout
				android:layout_alignParentTop="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
				<LinearLayout
				android:id="@+id/ringer_options"
				android:layout_alignParentTop="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    
			    	<!-- Ringer Options -->
			    	
			    	<ToggleButton 
				    android:textOn="@string/enable"
				    android:textOff="@string/disable"
				    android:id="@+id/ringer_toggle"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"/>
				    
				    <EditText
				    android:id="@+id/ringer_name"
				    android:hint="@string/ringer_name"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"/>
			    	
				</LinearLayout>    
		    
			    <LinearLayout
			    android:id="@+id/info"
			    android:layout_below="@id/ringer_options"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginBottom="10dip"
			    android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip">
			    	
			    	<!-- Ringtone -->
			    	
				   <include android:id="@+id/ringtone_info" 
				    layout="@layout/ringtone"
				    android:layout_width="match_parent"
				  	android:layout_height="wrap_content"
				  	android:visibility="gone"
				  	/>
				    
				    <!-- Notification Ringtone -->
				    
				   <include android:id="@+id/notification_ringtone_info" 
				    layout="@layout/notification_ringtone"
				    android:layout_width="match_parent"
				  	android:layout_height="wrap_content"
				  	android:visibility="gone"
				  	/>
				    
				    <!--  Media Volume -->
				    
				     <include android:id="@+id/music_volume_info" 
				    layout="@layout/music_volume"
				    android:layout_width="match_parent"
				  	android:layout_height="wrap_content"
				  	android:visibility="gone"
				  	/>
				    
				    <!-- Alarm Volume -->
				     <include android:id="@+id/alarm_volume_info" 
				    layout="@layout/alarm_volume"
				    android:layout_width="match_parent"
				  	android:layout_height="wrap_content"
				  	android:visibility="gone"
				  	/>
				    
				    <!-- data options -->
				    <TextView
				    android:id="@+id/data_label"
				    android:text="@string/data" 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:background="@android:drawable/title_bar"
				    android:textColor="#FFFFFF"
				    android:layout_marginTop="10dip"
				    android:visibility="gone"
				  	/>
				    
				    <ToggleButton
				    android:id="@+id/wifi_toggle"
				    android:textOn="@string/wifi_enabled"
				    android:textOff="@string/wifi_disabled"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:visibility="gone"
				    android:layout_marginLeft="10dip"
				    android:layout_marginRight="10dip"
				  	/>
				    
				    <ToggleButton
				    android:id="@+id/bluetooth_toggle"
				    android:textOn="@string/bt_enabled"
				    android:textOff="@string/bt_disabled"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:visibility="gone"
				    android:layout_marginLeft="10dip"
				    android:layout_marginRight="10dip"
				  	/>
				    
				     <!-- Update Interval -->
			    	
				   <include android:id="@+id/update_interval_info" 
				    layout="@layout/update_interval"
				    android:layout_width="match_parent"
				  	android:layout_height="wrap_content"
				  	android:visibility="gone"
				  	/>
				     </LinearLayout>
				    </LinearLayout>
				    
		</com.TwentyCodes.android.LocationRinger.ui.ScrollView>
		
    </RelativeLayout>
    
    <TextView
    android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_above="@id/buttons"
  	android:textColor="#ffffff"
  	android:text="@string/add_a_feature"
  	android:layout_centerHorizontal="true"
  	android:id="@+id/add_a_feature_label"
  	android:background="#000000"
  	android:gravity="center"
  	/>
		   	    
</RelativeLayout>